// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner default 1`] = `
.c1 {
  border: 5px solid #f3f3f3;
  border-radius: 50%;
  border-top: 5px solid #3498db;
  width: 10px;
  height: 10px;
  margin: auto;
  padding: auto;
  animation: spin 1.75s linear infinite;
}

.c0 {
  align-self: center;
  justify-self: center;
}

.c2 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
</div>
`;

exports[`Spinner renders a large spinner 1`] = `
.c1 {
  border: 5px solid #f3f3f3;
  border-radius: 50%;
  border-top: 5px solid #3498db;
  width: 50px;
  height: 50px;
  margin: auto;
  padding: auto;
  animation: spin 1.75s linear infinite;
}

.c0 {
  align-self: center;
  justify-self: center;
}

.c2 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    size="large"
  />
  <div
    className="c2"
  />
</div>
`;

exports[`Spinner renders a medium spinner 1`] = `
.c1 {
  border: 5px solid #f3f3f3;
  border-radius: 50%;
  border-top: 5px solid #3498db;
  width: 30px;
  height: 30px;
  margin: auto;
  padding: auto;
  animation: spin 1.75s linear infinite;
}

.c0 {
  align-self: center;
  justify-self: center;
}

.c2 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  />
  <div
    className="c2"
  />
</div>
`;

exports[`Spinner renders a small spinner 1`] = `
.c1 {
  border: 5px solid #f3f3f3;
  border-radius: 50%;
  border-top: 5px solid #3498db;
  width: 10px;
  height: 10px;
  margin: auto;
  padding: auto;
  animation: spin 1.75s linear infinite;
}

.c0 {
  align-self: center;
  justify-self: center;
}

.c2 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    size="small"
  />
  <div
    className="c2"
  />
</div>
`;

exports[`Spinner with color and text props 1`] = `
.c1 {
  border: 5px solid #f3f3f3;
  border-radius: 50%;
  border-top: 5px solid #ff00ff;
  width: 10px;
  height: 10px;
  margin: auto;
  padding: auto;
  animation: spin 1.75s linear infinite;
}

.c0 {
  align-self: center;
  justify-self: center;
}

.c2 {
  text-align: center;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="#ff00ff"
  />
  <div
    className="c2"
  >
    this is a test
  </div>
</div>
`;
